--- a/_config.yml
+++ b/_config.yml
@@ -1,2 +1,2 @@
 theme: jekyll-theme-cayman
-permalink: /blog/:year/:month/:day/:title.html
+permalink: /skills-github-pages/blog/:year/:month/:day/:title.html
